--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Get the middle piece!</h1>
-    
+    <h1>Get the middle value, or values!</h1>
+    <h2>If you enter an odd amount of numbers (example: 5 numbers) you'll only see the middle value. 
+        If you enter an even amount of numbers (example: 4 numbers) you'll see 2 values.
+    </h2>
+    <h2><em>Enter any number to find out!</em></h2>
+    <div class="container">
+        <form>
+            <input type="number" id="numberBox" placeholder="Enter a Number" size="100">
+        </form>
+    </div>
+        <div id="buttonContainer">
+            <button id="go-btn"><strong>Go!</strong></button>
+        </div>
+        <div id="resultDiv"></div>
+
     <script src="index.js" async defer></script>
 </body>
 </html>
