--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Get the middle character!</h1>
-    <h2>Enter some text to fin the middle character, or charaters.</h2>
+    <h2>Enter some text to find the middle character, or characters.</h2>
     <h2><em>Enter any number to find out!</em></h2>
     <div class="container">
         <form>
