--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2><em>Enter any number to find out!</em></h2>
     <div class="container">
         <form>
-            <input type="text" id="textBox" placeholder="Your text here" size="100">
+            <input type="text" id="textBox" placeholder="Your text here" size="100" value="">
         </form>
     </div>
         <div id="buttonContainer">
