--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <h2><em>Enter any number to find out!</em></h2>
     <div class="container">
         <form>
-            <input name="text" type="text" value="string" id="textBox" placeholder="Your text here" size="100">
+            <input name="text" type="text" value="" id="textBox" placeholder="Your text here" size="100"> 
+    
+            <div id="buttonContainer">
+                <button id="go-btn"><strong>Go!</strong></button>
+            </div><!--close button container-->
         </form>
-    </div>
-        <div id="buttonContainer">
-            <button id="go-btn"><strong>Go!</strong></button>
-        </div>
+    </div><!--closeContainer-->
         <div id="resultDiv"></div>
 
     <script src="index.js" async defer></script>
