--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Tajawal:wght@300&display=swap');
+    </style>
+    
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1>Get the middle character!</h1>
