--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@300&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Tajawal:wght@300&display=swap');
     </style>
-    
+
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1>Get the middle character!</h1>
     <h2>Enter some text to find the middle character, or characters.</h2>
-    <h2><em>Enter any number to find out!</em></h2>
+    <h2><em>Enter any word or sentence to find out!</em></h2>
     <div class="container">
         <form>
             <input name="text" type="text" value="" id="textBox" placeholder="Your text here" size="100"> 
